# CSE396-rasp-ali-recogner

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CSE396_rasp_ali_recogner  CSE396_rasp_ali_recogner.cbp  Makefile  README.md  cmake_install.cmake  main.cpp
SVMTrain&Detect/: CMakeLists.txt  Flann.cpp  collectData.cpp  detect.cpp  svm.h  train.cpp
Tutorials/pca_tut/: Makefile  READ_ME  pca_test.cpp
arduinoDriver/: arduinoDriver.ino  arduinoStepMotor.cpp  arduinoStepMotor.h
include/: ArduinoDriver.h  Communication.h  ConnectionHelper.h  Constants.h  Exceptions396.h  Frame.h  ProccesImage.h  Protochols.h  Requirements.h  SerialPort.h  ServerThread.h  arduino.h  rs232.h
src/: ArduinoDriver.cpp  Communication.cpp  ConnectionHelper.cpp  Frame.cpp  ProccesImage.cpp  SerialPort.cpp  ServerThread.cpp  arduino.cpp  rs232.c
